dev/argocd-myapp-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-myapp-internal-service

spec:
  type: ClusterIP
  ports:
   - port: 80
  selector:
    app: myapp
