dev/argocd-myapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-myapp-ingress

spec:
  rules:
  - host: nginx-from-argocd.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-myapp-internal-service
            port:
              number: 80
